<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/hinhnen">
    <EditText
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_dndk"
        android:id="@+id/edittext_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:drawableLeft="@drawable/usser"
        android:padding="10dp"
        android:textSize="20dp"
        android:gravity="center"
        android:paddingLeft="2dp"
        />
    <EditText
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_dndk"
        android:id="@+id/edittext_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="Email"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:padding="10dp"
        android:textSize="20dp"
        android:gravity="center"
        android:paddingLeft="2dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_dndk"
            android:id="@+id/edittext_address"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="Address"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:padding="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:paddingLeft="2dp"
            />
        <Spinner
            android:id="@+id/spnTinhThanh"
            android:layout_marginTop="30dp"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dndk"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>

    <EditText
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_dndk"
        android:id="@+id/edittext_number"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="Phone Number"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:padding="10dp"
        android:textSize="20dp"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:background="@drawable/bg_dndk"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:gravity="center"
        android:paddingLeft="2dp"
        />
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/bg_dndk"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:inputType="textPassword"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:background="@drawable/bg_item"

        ></Button>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textview_Login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/login1"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#04ea00"

            />
    </LinearLayout>
</LinearLayout>
</ScrollView>